# qarchive

./: README.md  pyproject.toml
qarchive/: __init__.py  qarchive.py  qarchive_base.py  qarchive_model.py  qarchive_store.py
scripts/: codegen.sh  to_jsonschema.py
