[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qarchive"
description = "Python package for Q-Chem qarchive files."
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Xiaoliang Pan" }
]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "h5py",
]
